# Genesis-Engine

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f070dd462f7_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  redis_client.py
backend/app/core/: constants.py  exceptions.py  security.py
backend/app/models/: __init__.py  agent.py  agent_manifest.py  behavior_log.py  chronicle.py  event.py  location.py  organization.py  relationship.py  user.py  world.py
backend/app/routers/: admin.py  agents.py  auth.py  behavior_logs.py  chronicle.py  events.py  gateway.py  organizations.py  worlds.py
backend/app/schemas/: agent.py  pagination.py  user.py  ws_messages.py
backend/app/services/: agent_service.py  auth_service.py  chronicle_service.py  event_service.py  gateway_service.py  observation_service.py  permission_service.py  projection_service.py  proxy_service.py
backend/app/tests/: conftest.py  test_agents.py  test_auth.py  test_events.py  test_world.py
backend/app/world/: action_queue.py  system_agents.py  tick_engine.py  world_seeder.py
connector-sdk/: pyproject.toml
connector-sdk/genesis_connector/: __init__.py  client.py  offline_proxy.py  protocol.py
connector-sdk/genesis_connector/examples/: simple_agent.py
frontend/: nuxt.config.ts  package.json
frontend/composables/: useAgent.ts  useApi.ts  useAuth.ts  useEventStream.ts  useWebSocket.ts
frontend/layouts/: default.vue  public.vue
(+20 files in other folders)
