[project]
name = "genesis-connector"
version = "0.1.0"
description = "Genesis Engine Connector SDK - Connect your AI Agent to the civilization"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
